# nebulastream

./: .actrc  .clang-format  .clang-tidy  .clang-tidy-pre-check  .conflict-files  .dockerignore  .gdbinit  .gitattributes  .gitignore  .gitmodules  .mailmap  .nebuli_history  .no-license-check  .travis.yml  BRANCH_CHANGELOG.md  CHANGELOG.md  CHECKLIST.yml  CLAUDE.md  CMakeLists.txt  CMakeLists_BACKUP_106367.txt  CMakeLists_REMOTE_106367.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Cargo.toml  FANOUT_TODOS_AND_BLOCKERS.md  HDFSreadme.md  HOME_SETUP.md  MEOS_INTEGRATION_STATUS.md  NOTICE  Nebuli.Dockerfile  PROJECT_STRUCTURE.md  PR_DESCRIPTION.md  ProxyFunctions.cpp  ProxyFunctions.hpp  README.md  RELEASE_NOTES.md  RobbinThreadLocalPreAggregateWindowOperator.ii  SPATIOTEMPORAL_INTEGRATION_GUIDE.md  SysTestLineMarkerProvider.java  Worker.Dockerfile  (+85 more)
asio/: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/BenchmarkSuite/: BenchmarkCreateUniformData.cpp  BenchmarkDynamicMemoryLayout.cpp  BenchmarkMemoryLayout.cpp  BenchmarkSkeleton.cpp  FilterQueryBenchmarks.cpp  MapQueryBenchmarks.cpp  QueryBufferSizesBenchmark.cpp  QueryTupleSizesBenchmark.cpp  SandBoxBenchmark.cpp  SandBoxBenchmark.h  SimpleQueryBenchmark.cpp  StatemanagerBenchmark.cpp  TupleBufferBenchmark.cpp  YSBSelect.cpp
benchmark/E2ETests/: E2EBase.cpp  E2EProjectBenchmark.cpp  E2ESelectionBenchmark.cpp  E2ESkelaton.cpp  E2EWindowBenchmark.cpp
benchmark/scripts/: README.md  benchmark.tsv  buffer-size-query-benchmark.py  create_flamegraph.sh  map-query-benchmark.py  parquet-spark-benchmark.py  query_compiler_benchmark.py  query_compiler_benchmark.sh  run_and_plot_benchmarks.py  run_and_plot_statemanager.py  tuple-size-query-benchmark.py
client/: CMakeLists.txt
client/include/: CPPClient.hpp
client/src/: CMakeLists.txt  CPPClient.cpp
data-types/: CMakeLists.txt  DataType.cpp  DataTypeRegistrar.cpp  DataTypeSerializationFactory.cpp  PhysicalType.cpp
data-types/builtin/: CMakeLists.txt  generic.cpp  generic.hpp  integer.cpp
data-types/custom/: CMakeLists.txt  point.cpp
data-types/include/: COW.hpp  DataType.hpp  DataTypeSerializationFactory.hpp  WellKnownDataTypes.hpp
data-types/physical/: PhysicalType.hpp
data-types/tests/: CMakeLists.txt  DataTypeTest.cpp
datagen/: CMakeLists.txt  README.md  config.yaml  datagen_batch_shared.cpp
datagen/docker/: Dockerfile  README.md  compose.yaml  config.yaml  entrypoint.sh
docs/: 00000000_template.md  20240701_static_plugin_registry.md  20240702_sources_and_sinks.md  CMakeLists.txt  Coding_Guidelines.md  DDTemplate.md  Doxyfile.in  README.md  benchmark_analysis.tex  checklist_pr.md  ci-skip-dummy-test.md  coding_guidelines.md  dealing_stealing_combined_results.tex  dependency.md  development.md  doxygen-awesome.css  frequently_used_abbreviations.md  nebulastream-frontend.md  nebuli-frontend-reference.md  running_workflows_locally.md  rust-cmake-integration.md  scheduling_modes_description.tex  scheduling_results.tex  scheduling_strategies.tex  watermarking_progress_window_triggering.md  work_stealing_results.tex
docs/Connectors/: DDSourcesAndSinks.md
docs/PluginRegistry/: DDSourcesAndSinks.md
docs/ai-usage/: README.md  _template.md
docs/design/: 00000000_template.md  20240489_nes_cep.md  20240489_nespls.md  20240701_static_plugin_registry.md  20240702_sources_and_sinks.md  20240703_SingleNodeWorker.md  20240705_nautilus_lib_integration.md  20240709_version-management.md  20240710_dependency-management.md  20240710_review-process.md  README.md  (+22 more)
grpc/: CMakeLists.txt  Checkpoint.proto  CoordinatorRPCService.proto  DeleteRequestParamObj.proto  EndDeviceProtocol.proto  Fuzz.proto  JavaUdfDescriptorMessage.proto  NebuliRPCService.proto  NodeStats.proto  ProbeRequestParamObj.proto  QueryReconfigurationPlan.proto  SerializableAggregationFunction.proto  SerializableDataType.proto  SerializableDecomposedQueryPlan.proto  SerializableExpression.proto  SerializableFunction.proto  SerializableIdentifier.proto  SerializableOperator.proto  SerializableQueryId.proto  SerializableQueryPlan.proto  SerializableQueryReconfigurationPlan.proto  SerializableReconfigurationMarker.proto  SerializableSchema.proto  SerializableShapeType.proto  SerializableTrait.proto  SerializableVariantDescriptor.proto  SingleNodeWorkerRPCService.proto  Spatial.proto  StatisticDeleteRequest.proto  StatisticProbeRequest.proto  StatisticWindowDescriptorMessage.proto  UDFDescriptorMessage.proto  UdfCatalogService.proto  WorkerCoordinate.proto  WorkerLocation.proto  WorkerRPCService.proto  health.proto
iotdb/: .clang-format  .cproject  .gitignore  CMakeLists.txt  ClangAstBuilder.cpp  Dockerfile-dev  NodeStatistics.cpp  VERSION  entrypoint_coordinator.cpp  entrypoint_worker.cpp  iotBroker.cpp  iotClient.cpp  iotCoordinator.cpp  iotMaster.cpp  iotNode.cpp  iotRestServer.cpp  iotSensor.cpp  iotServer.cpp  iotWorker.cpp  llvm_test.cpp  nesCoordinator.cpp  nesCoordinatorStarter.cpp  nesWorker.cpp  nesWorkerStarter.cpp  nesWorker_starter.cpp  start.cpp  t  zmqReceiver.cpp  zmqSender.cpp
llvm-passes/: CMakeLists.txt
microexperiment/: CMakeLists.txt  Makefile
nes-asp/: CMakeLists.txt
nes-benchmark/: CMakeLists.txt  E2ERunner.cpp  README.md  SNCBDataGenerator.hpp  plot_recording_selection.py  render_recording_selection_report.py
nes-client/: CMakeLists.txt
nes-codecs/: CMakeLists.txt
nes-common/: CMakeLists.txt
nes-compiler/: CMakeLists.txt
nes-conn-test/: .gitignore  CMakeLists.txt  README.md  core_design_principles.md  sv_fmt.py
nes-connectors/: CMakeLists.txt
nes-coordinator/: CMakeLists.txt  Cargo.toml  README.md
nes-core/: CMakeLists.txt
nes-data-parser/: CMakeLists.txt
nes-data-types/: CMakeLists.txt
nes-distributed/: CMakeLists.txt  network
nes-execution/: CMakeLists.txt
nes-execution-engine/: CMakeLists.txt  datestamp  datestamps
nes-inference/: CMakeLists.txt  InferModelLogicalOperator.cpp  InferModelNameLogicalOperator.cpp  LogicalInferModelNameOperator.cpp  LogicalInferModelOperator.cpp  Model.cpp  ModelLoader.cpp
nes-input-formatters-uncompiled/: CMakeLists.txt
(+30317 files in other folders)
